# meta2-engine

./: .gitignore  LICENSE  README.md  SECURITY.md
engine/: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  heuristic_refinement.py  llms.txt  meta2-chat  meta2-engine  prompt_baker.py  search_runner.py  user-admin
engine/.githooks/: pre-commit
engine/.github/: CODEOWNERS  pull_request_template.md
engine/PROMPT_TEMPLATES/: triad.md
engine/_output/: ARCHITECTURE_CONTEXT.md  merge_branches_report.json
engine/benchmarks/: refinement.jsonl
engine/docs/: EXPLAINER.md  INFRA_CODER.md  RESEARCH_LIBRARY.md  VERIFY.md  index.html  styles.css
engine/field/: A_heuristic_ask_act.md  A_heuristic_evidence_gate.md  B_visual_alpha_beta_gamma.md  B_visual_bits_alphabet.md  C_prompt_triad_compressor.md  C_prompt_verification_rubric.md  D_shard_ask_act_fn.md  D_shard_ucb_selector.md  E_reflection_occam_over_scope.md  E_reflection_one_diamond.md
engine/policies/: BOUNDARIES.yaml  CAPS.yaml  LANES.yaml  META2_RULES.yaml  POLICY.ask_act.yaml  RETRY.yaml  default.json  meta_loop.json
engine/prompts/: META_OMNI.md  meta2-sys-v0-1.yaml
engine/proposals/: 01-governance-ci.md  single-nudge-governance-ci.md
engine/reports/: heuristic_refinement_report.md  search-heuristic.jsonl
engine/schemas/: CONTEXT.schema.json  KERNEL_CONTRACT.json  RESEARCH_ARTIFACT.schema.json  TRACE.schema.json
engine/scripts/: dev_up.sh  field_publish.py  meta_loop.py  (+1 more)
one-engine-rs/: AGENT_B_DEPLOYED.md  ARCHITECTURE.md  Cargo.toml  PARALLEL_EXECUTION.md  PATCHES_APPLIED.md  POS_TOKEN.json  README.md  VERIFICATION_RESULTS.md  chat.sh  test_date.txt  trace.jsonl
(+99 files in other folders)
