[package]
name = "one-engine"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
shell-escape = "0.1"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[[bin]]
name = "one-research"
path = "bin/one_research.rs"
