[package]
name = "one-engine-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "one-engine-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
anyhow = "1.0"
async-trait = "0.1"
async-openai = "0.19"
futures = "0.3"
